Added salt and tested comms from unity, few mods

--- a/index.yaml
+++ b/index.yaml
@@ -14,3 +14,9 @@ indexes:
   properties:
   - name: value
   - name: player_id
+
+- kind: Scores
+  properties:
+  - name: value
+    direction: desc
+  - name: player_id
